# goit-python

./: .gitignore  README.md  decor.py  parse_multidict.py  test1.py  test2.py
1.10/: AmountPaymentList.py  LookUpKeyDict.py  animal_8.py
lesson1/: hw1.py
module_1/: get_discount_price_customer.py
module_1/1.10/: !classes_teach.py  NumberString.py  add_id.py  chupakabra.py  contacts-2.py  contacts-3.py  contacts.py
module_1/1.11/: RandomVectors_#11.py  point_vector_#5.py  setter_#2.py  setter_check_#3.py  t.py  vector_#4.py  vector_add_sub_#7.py  vector_call_#6.py  vector_len_#10.py  vector_len_#9.py  vector_mul_#8.py
module_1/1.12/: class_pickle.py  copy_class_contacts.py  copy_class_person.py  copy_deepcopy.py  csv_write_read_contacts_to_file.py  json_write_read_contacts_to_file.py  pickle_getstate.py  pickle_setstate.py  pickle_write_read_contacts_to_file.py
module_1/1.2/: calc1.1.py  calc_mentor.py
module_1/1.3/: fibonacci.py  random_pwd.py  task11.py  tech1.py
module_1/1.4/: calculate_distance.py  format_ingredients.py  game.py  is_valid_password.py  is_valid_pin_codes.py  parse_args.py  parse_folder.py  task_4_4.py
module_1/1.5/: bublesort.py  (+12 more)
module_1/final_homework/: awesome_bot.py  build.cmd  personal_manager.py  setup.cfg  testing_manager.py  testing_menu.py
module_1/final_homework/UML/: personal_manager.uml
module_1/final_homework/install_with_setuptools/: make_distr.cmd  setup.py
module_1/final_homework/mods/: base_classes.py
module_1/final_homework/src/personal_manager/: personal_manager.py  sort_files.py
module_2/2.2/: build.cmd  classes.dot  generate_uml.cmd  packages.dot  pyproject.toml  setup.cfg
module_2/2.2/UML/: UML.drawio  diagram.uxf  personal_manager.uml
module_2/2.2/src/personal_manager/: personal_manager.bin1  personal_manager.py  personal_manager2.py
module_2/2.2/src/personal_manager/version_2/: basic_classes.py  personal_manager2.py
module_2/2.2/version_2/: interface.py  interface_cmd.py  personal_manager2.py  primitives_classes.py
module_6/: 1.py  README.md  def_rename_files.py  find_empty_folder.py  sort.cmd  sort.sh  sort_test.sh  sorting_files.py  t.py  test1.py
module_7/: README.md
module_8/: congratulate.py  users.txt
module_9/: awesome_bot.py
telegram_bot/: bot.py  requirements.txt  test1.py
(+160 files in other folders)
