[metadata]
name = personal-manager
version = 0.7
author = Oleksii Korshunov
author_email = korshunov.olexiy@gmail.com
description = Your personal helper on computer is able to do many things
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/korshunov-olexiy/goit-python/tree/main/module_1/final_homework
project_urls =
    Bug Tracker = https://github.com/korshunov-olexiy/goit-python/tree/main/module_1/final_homework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    setuptools>=42
    pick>=1.2.0
    wheel
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
exclude =
    UML
    tests
    install_with_setuptools
    dist
    env
    .vscode
where =
    src

[options.entry_points]
console_scripts =
    personal-manager = personal_manager.personal_manager:main
